--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         <div id="servicio-drones" class="service">
             <h2>Servicio de fotografia y video aereo</h2>
             <p>Ofrecemos servicio de filmacion aerea dentro y fuera de la ciudad para pautas publicitarias, paginas web y venta de vivienda </p>
-            <img src="./image/DJI_0013.JPG" alt="imagen mar" title="imagen de Mar" style="width: 500px;;">
-            <img src="./image/DJI_0017.JPG" alt="imagen mar" title="imagen de Mar" style="width: 500px;;">
-    <video controls center width= "480" height= "450" autoplay="1">
+            <img src="./image/DJI_0013.JPG" alt="imagen mar" title="imagen de Mar" style="width: 300px;;">
+            <img src="./image/DJI_0017.JPG" alt="imagen mar" title="imagen de Mar" style="width: 305px;;">
+    <video controls center width= "280" height= "280" autoplay="1">
         <source src="./video/DJI_0960.mp4   " type="video/MP4">
     </video>
    </div>
@@ -38,7 +38,7 @@
    <img src="./image/vigilancia_drone.png" alt="drone de vigilancia">
    <h2> Servicio de fotogrametria con drone</h2>
    <p>El servicio de fotogrametria esta enfocado al area de ingenieria y ambiental, con esto podemos realizar medicion de terrenos de finca, lotes, potreros entre otros, esta tecnica se puede complementar con topografia tradicional (estacion total, puntos de control)</p>
-   <img src="./image/fotogrametria.png" alt="fotogrametria con drone deploy">
+   <img src="./image/fotogrametria.png" alt="fotogrametria con drone deploy" style="width: 300px;>
 <h2> Servicio de aspersion con drone</h2>
 <p>El servicio de aspercion o fumigacion es altamente usado para agricultura, el usar drones para este fin mejora la eficiencia y evita el desperdicio de quimicos, ya que al ser aplicado desde la parte superior del cultivo es aprovechado en mayor cantidad, esto en comparacion al metodo tradicional de aspersion manual o con maquinaria pesada. es importante tener claro que la inversion inicial es bastante costosa, pero esto se recupera en el largo plazo</p>
 <img src="./image/fumigacion_drone.png" alt="drone de fumigacion">
