--- a/cctv.html
+++ b/cctv.html
@@ -37,8 +37,8 @@
 <ul> La segunda son las tipo ip, estas aunque tambien necesitan una conexion directa no es necesario que llegue al NVR ya que usan el protocolo ip para transmitir datos, por lo que sera suficiente con que el cable llegue a un switch o un punto de red, lo demas seria configuracion a nivel de software de la camara con el NVR, una ventaja de este sistema es que tiene una instalacion mas limpia que las analogas y por usar el protocolo ip la transmision puede llegar mas lejos, igualmente en caso de daño la grabacion no se vera afectada, ya que esta es almacenada en un NVR</ul>
 <ul>La ultima y mas reciente son las tipo WI-FI, estas se han vuelto muy populares debido a la facilidad de instalacion, costo y espacio que utilizan, la mayor ventaja de estas es que no necesitan un equipo que reciba la señal de video, ya que tienen la opcion de grabacion interna (microsd) esto ayuda a una instalacion mas limpia, a que fisicamente solo requiere conexion electrica, tambien ofrecen audio bidireccional, capacidad de rotacion y algunas son tan pequeñas que se pueden ocultar de manera muy sencilla. La parte no tan buena es que su vida util en algunos casos no es la esperada y esto depende mucho de las condiciones ambientales donde se instalen</ul>
 
-<img src="./image/Analoga-VS-IP.webp" alt="comparacion"style="width: 400;" height="400">
-<img src="./image/wifi.jpg" alt="Camara WI-FI" style="width: 400;" height="400"
+<img src="./image/Analoga-VS-IP.webp" alt="comparacion"style="width: 400;" height="200">
+<img src="./image/wifi.jpg" alt="Camara WI-FI" style="width: 400;" height="200">
 
 
 </body>
