--- a/contacto.html
+++ b/contacto.html
@@ -13,12 +13,13 @@
             <img src="./image/logo_empresa.png" alt="Logo de empresa" style="width: 100;" height="100" class="logo-img"> 
         </a>
        
-    <nav>
-        <a href="cctv.html">Circuito Cerrado de TV</a></li>
-        <a href="desarrollo.html">Desarrollo de Software</a></li>
-        <a href="contacto.html">Contacto</a></li>
-    </nav>
-
+        <div class="nav">
+            <a href="index.html">Inicio</a>
+            <a href="cctv.html">CCTV</a>
+            <a href="drone.html">Servicio drone</a>
+            <a href="desarrollo.html">Desarrollo de software</a>
+            <a href="#">API</a>
+          </div>
     
     </header>
 </body>
