--- a/cctv.html
+++ b/cctv.html
@@ -13,12 +13,13 @@
             <img src="./image/logo_empresa.png" alt="Logo de empresa" style="width: 100;" height="100" class="logo-img"> 
         </a>
     
-    <nav>
-        <a href="cctv.html">Circuito Cerrado de TV</a></li>
-        <a href="desarrollo.html">Desarrollo de Software</a></li>
-        <a href="contacto.html">Contacto</a></li>
-    </nav>
-        </div.>  
+        <div class="nav">
+            <a href="index.html">Inicio</a>
+            <a href="cctv.html">CCTV</a>
+            <a href="drone.html">Servicio drone</a>
+            <a href="desarrollo.html">Desarrollo de software</a>
+            <a href="#">API</a>
+          </div>
     </header>
 
     <h1> Implementamos sistemas de CCTV de alta calidad para la seguridad y vigilancia de tu hogar o negocio.</h1>
@@ -39,6 +40,10 @@
 
 <img src="./image/Analoga-VS-IP.webp" alt="comparacion"style="width: 400;" height="200">
 <img src="./image/wifi.jpg" alt="Camara WI-FI" style="width: 400;" height="200">
+
+<footer>
+    <p>&copy; 2024 Mi Empresa. Todos los derechos reservados.</p>
+</footer>
 
 
 </body>
