--- a/desarrollo.html
+++ b/desarrollo.html
@@ -13,12 +13,13 @@
             <img src="./image/logo_empresa.png" alt="Logo de empresa" style="width: 100;" height="100" class="logo-img"> 
         </a>
     
-    <nav>
-        <a href="cctv.html">Circuito Cerrado de TV</a></li>
-        <a href="desarrollo.html">Desarrollo de Software</a></li>
-        <a href="contacto.html">Contacto</a></li>
-    </nav>
-        </div.>  
+        <div class="nav">
+            <a href="index.html">Inicio</a>
+            <a href="cctv.html">CCTV</a>
+            <a href="drone.html">Servicio drone</a>
+            <a href="desarrollo.html">Desarrollo de software</a>
+            <a href="#">API</a>
+          </div>
     </header>
     <h1>Nuestro equipo desarrolla soluciones de software a medida, adaptadas a las necesidades específicas de tu empresa.
     </h1>
@@ -30,6 +31,10 @@
     <p> La necesidad principal del desarrollo de software es debido la facilidad de manejar grandes volumenes de informacion de manera agil y gracias a internet tener acceso a esos datos en linea y poder descargar registros de ventas, compras, clientes entre otros, la principal mejora es a nivel de procesos, donde al crear nuestro software a medida tendremos los datos para analiszar y tomar decisiones que afecten el funcionamiento del negocio.</p>
     <h2>Seguridad a nivel de desarrollo web</h2>
     <p>La seguridad es un pilar fundamental al momento de la creacion de cualquier software, esto ademas de ser importante para el cliente es un requisito de ley, proteccion de datos personales, por lo tanto siempre contamos con un area especifica que se encarga del monitoreo en tiempo real de las peticiones que se realicen a los servidores (SOC), gracias a este departamento podemos estar tranquilos y al tanto de los movimientos que se realicen para tener la informacion de primera mano, en caso de que se presente algun error de seguridad nuestro equipo se encargara de hacer el analisis forense con el reporte y solucion de la falla.</p>
+
+    <footer>
+        <p>&copy; 2024 Mi Empresa. Todos los derechos reservados.</p>
+    </footer>
     
 </body>
 </html>
