--- a/cctv.html
+++ b/cctv.html
@@ -22,24 +22,26 @@
           </div>
     </header>
 
-    <h1> Implementamos sistemas de CCTV de alta calidad para la seguridad y vigilancia de tu hogar o negocio.</h1>
+    <h1>Implementamos sistemas de CCTV de alta calidad para la seguridad y vigilancia de tu hogar o negocio</h1>
 
 <h2> Que es un circuito cerrado de tv</h2>
 <p> un CCTV o circuito cerrado de television son equipos conectados fisicamente o via inalambrica que transmiten imagen y audio y solo puede ser visualizado por un grupo especifico de personas, esto segun la necesidad del cliente, puede ser seguridad, control o simplemente para uso personal (domestico)</p>
-<iframe src="https://giphy.com/embed/xT1XGYy9NPhWRPp4pq" width="180" height="160" style="" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/ball-camera-bounce-xT1XGYy9NPhWRPp4pq">via GIPHY</a></p>
+
 
 <h2> Como funciona un CCTV</h2>
 <p> El funcionamiento para la mayoria de sistemas de grabacion tiene el mismo principio, envian señales de video hasta un DVR, donde son almacenadas y guardadas por un tiempo especifico, esto varia del tipo de almacenamiento (local/nube) pero puede ir desde 1 mes hasta 3 meses, tambien influye la calidad de la imagen, la cantidad de camaras y el modo de grabacion (continua/movimiento)</p>
+
 <br>
 <p>Tambien tenemos opcion de registros, es decir podemos enviar notificaciones via sms o e-mail, alertas sonoras en caso de que algo no este bien y aplicaciones moviles para visualizar en tiempo real lo que las camaras estan registrando con la opcion de eventos anteriores, esta ultima es la mas usada para equipos domesticos.</p>
+
 <h2>Tipos de camaras para CCTV</h2>
 <p> A nivel general existen 3 tipos de camaras, segun la necesidad y el presupuesto puede ser mas util una que otra</p>
+
 <ul> la primera y mas utilizada son las tipo analogo, estas necesitan una conexion directa fisicamente hasta el DVR, pueden ser tipo domo o bala, su alcance inicialmente se reduce por la perdida de potencia en largas distancias, aunque en la actualidad existen equipos que pueden dar mayor cobertura, como desventaja de este sistema es que el cable que se debe usar es bastante y si no se organiza de manera adecuada no es tan agradable a primera vista, pero su vida util es mayor y en caso de daño no se perderan eventos, como si podria pasar con las WI-FI, esto en el caso de que no se tenga respaldo en la nube</ul>
 <ul> La segunda son las tipo ip, estas aunque tambien necesitan una conexion directa no es necesario que llegue al NVR ya que usan el protocolo ip para transmitir datos, por lo que sera suficiente con que el cable llegue a un switch o un punto de red, lo demas seria configuracion a nivel de software de la camara con el NVR, una ventaja de este sistema es que tiene una instalacion mas limpia que las analogas y por usar el protocolo ip la transmision puede llegar mas lejos, igualmente en caso de daño la grabacion no se vera afectada, ya que esta es almacenada en un NVR</ul>
 <ul>La ultima y mas reciente son las tipo WI-FI, estas se han vuelto muy populares debido a la facilidad de instalacion, costo y espacio que utilizan, la mayor ventaja de estas es que no necesitan un equipo que reciba la señal de video, ya que tienen la opcion de grabacion interna (microsd) esto ayuda a una instalacion mas limpia, a que fisicamente solo requiere conexion electrica, tambien ofrecen audio bidireccional, capacidad de rotacion y algunas son tan pequeñas que se pueden ocultar de manera muy sencilla. La parte no tan buena es que su vida util en algunos casos no es la esperada y esto depende mucho de las condiciones ambientales donde se instalen</ul>
 
-<img src="./image/Analoga-VS-IP.webp" alt="comparacion"style="width: 400;" height="200">
-<img src="./image/wifi.jpg" alt="Camara WI-FI" style="width: 400;" height="200">
+</div>
 
 <footer>
     <p>&copy; 2024 Mi Empresa. Todos los derechos reservados.</p>
