--- a/cctv.html
+++ b/cctv.html
@@ -18,7 +18,7 @@
             <a href="cctv.html">CCTV</a>
             <a href="drone.html">Servicio drone</a>
             <a href="desarrollo.html">Desarrollo de software</a>
-            <a href="#">API</a>
+            <a href="">API</a>
           </div>
     </header>
 
@@ -43,10 +43,11 @@
 
 </div>
 
+<img src="./image/cctv.gif" alt="tipos de camaras" style="width: 350px; margin: 0px 550px;">
+
 <footer>
     <p>&copy; 2024 Mi Empresa. Todos los derechos reservados.</p>
 </footer>
-
 
 </body>
 </html>
