--- a/api.html
+++ b/api.html
@@ -4,8 +4,83 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>API Gatitos</title>
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="icon" href="./image/logo_cctv.png">
 </head>
 <body>
+    <header>
+        <a href="index.html" class="logo">
+            <img src="./image/logo_empresa.png" alt="Logo de empresa" style="width: 100;" height="100" class="logo-img"> 
+        </a>
     
+        <div class="nav">
+            <a href="index.html">Inicio</a>
+            <a href="cctv.html">CCTV</a>
+            <a href="drone.html">Servicio drone</a>
+            <a href="desarrollo.html">Desarrollo de software</a>
+            <a href="api.html">API</a>
+          </div>
+    </header>
+
+    <title>Random Cat Image</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background-color: #f4f4f4;
+        }
+        #cat-container {
+            text-align: center;
+        }
+        #cat-container img {
+            max-width: 100%;
+            height: auto;
+            border: 2px solid #ccc;
+            border-radius: 8px;
+width: 300px; /* Fixed width */
+            height: 300px; /* Fixed height */
+        }
+
+    </style>
+</head>
+<body>
+    <div id="cat-container">
+        <h1>Random Cat Image</h1>
+        <button id="fetch-cat">Fetch New Cat</button>
+        <div id="cat-image">
+            <!-- The cat image will be displayed here -->
+        </div>
+    </div>
+
+    <script>
+        document.getElementById('fetch-cat').addEventListener('click', fetchCatImage);
+
+        function fetchCatImage() {
+            fetch('https://api.thecatapi.com/v1/images/search?size=med&mime_types=jpg&format=json&has_breeds=true&order=RANDOM&page=0&limit=1')
+                .then(response => response.json())
+                .then(data => {
+                    const catImageUrl = data[0].url;
+                    const catImageElement = document.createElement('img');
+                    catImageElement.src = catImageUrl;
+                    catImageElement.alt = 'Random Cat';
+
+                    const catImageContainer = document.getElementById('cat-image');
+                    catImageContainer.innerHTML = ''; // Clear previous image
+                    catImageContainer.appendChild(catImageElement);
+                })
+                .catch(error => console.error('Error fetching cat image:', error));
+        }
+
+        // Fetch a cat image on page load
+        fetchCatImage();
+    </script>
+</body>
+</html>
+
+
 </body>
 </html>
