--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
     <div class="contenedor">
     <div id="izquierda">
     <h1>Acerca de </h1>
-    <h2> GMC ingenieria nace debido a una necesidad en el mercado de constante crecimiento a nivel de tecnologia creacion y aplicaciones que se van creando y solucionan necesidades puntuales, ofrecemos servicios de instalacion, configuracion, desarrollo web y fotografia aerea.</h2>
+    <p> GMC ingenieria nace debido a una necesidad en el mercado de constante crecimiento a nivel de tecnologia creacion y aplicaciones que se van creando y solucionan necesidades puntuales, ofrecemos servicios de instalacion, configuracion, desarrollo web y fotografia aerea.</p>
     <br>
     <h1>Mision</h1>
-    <h2>Nuestra mision en proporcionar soluciones a la medida de cada necesidad, nos comprometemos a ofrecer un servicio personalizado y profesional en vuelo con drone, desarrollo web y instalacion de circuito cerrado de tv utilizando la ultima tecnologi y cumpliendo con estandares de calidad</h2>
+    <p>Nuestra mision en proporcionar soluciones a la medida de cada necesidad, nos comprometemos a ofrecer un servicio personalizado y profesional en vuelo con drone, desarrollo web y instalacion de circuito cerrado de tv utilizando la ultima tecnologi y cumpliendo con estandares de calidad</p>
     <br>
     <h1>Vision</h1>
-    <h2> Ser reconocidos en el sector de servicios tecnologicos y resaltar por nuestra excelencia en la ejecucion de cualquier proyecto, con una constante evolucion y uso de las herramientas mas actuales, esto con el fin de brindar la mayor calidad en el menor tiempo posible. Nos proyectamos como una empresa referente en la integracion de soluciones con la posibilidad de facil adaptacion a cualquier tecnologia que nuestros clientes esten usando.</h2>
+    <p> Ser reconocidos en el sector de servicios tecnologicos y resaltar por nuestra excelencia en la ejecucion de cualquier proyecto, con una constante evolucion y uso de las herramientas mas actuales, esto con el fin de brindar la mayor calidad en el menor tiempo posible. Nos proyectamos como una empresa referente en la integracion de soluciones con la posibilidad de facil adaptacion a cualquier tecnologia que nuestros clientes esten usando.</p>
 </div>
     <div class="derecha">
 
