--- a/api.html
+++ b/api.html
@@ -22,14 +22,11 @@
           </div>
     </header>
 
-    <title>Random Cat Image</title>
-</head>
-<body>
     <div id="cat-container">
-        <h1>Random Cat Image</h1>
-        <button id="fetch-cat">Fetch New Cat</button>
+        <h1></h1>
+        <button id="fetch-cat">mostrar 1 gato</button>
         <div id="cat-image">
-            <!-- The cat image will be displayed here -->
+
         </div>
     </div>
 
